QE-1271 Fix MTP tooltip overlapping search cta

--- a/wp-content/themes/quarkexpeditions/src/front-end/components/search-filters-bar/style.scss
+++ b/wp-content/themes/quarkexpeditions/src/front-end/components/search-filters-bar/style.scss
@@ -612,7 +612,7 @@
 		opacity: 0;
 		display: flex;
 		position: fixed;
-		z-index: 5;
+		z-index: 105;
 		bottom: 0;
 		left: 0;
 		background-color: var(--color-white);
@@ -634,5 +634,13 @@
 		@media screen and (min-width: grid-size(sm)) {
 			display: none;
 		}
+	}
+}
+
+.expedition-cards__transfer-package-content .drawer__body {
+	padding-bottom: var(--spacing-9);
+
+	@media screen and (min-width: grid-size(sm)) {
+		padding-bottom: 0;
 	}
 }
